# ion-compact

./: .gitignore  CMakeLists.txt  LICENSE  README.md
depend/: CMakeLists.txt
depend/zstd/: CMakeLists.txt  zstd.sharpmake.cs
src/ion/: CoreCommon.h
src/ion/compact/: CompactReader.h  CompactSerialization.h  CompactWriter.h  CompressedInfo.h  Compression.h  CompressionSystem.cpp  CompressionSystem.h  CompressionUtil.h  Decompression.h  DecompressionSystem.cpp  DecompressionSystem.h
test/: test_helpers.h  tests.cpp
